@@ -7,6 +7,8 @@
   Graphs.
 - Implemented feature #11980: Provide an initial array with labels for labeled
   axis
+- Implemented feature #13634: Make Offset of ezcGraphAxisRotatedLabelRenderer
+  optional
 
 
 1.4 - Monday 05 January 2009
